fix branch for deploy

--- a/backend/.env
+++ b/backend/.env
@@ -1,3 +1,3 @@
+MONGO_URI=mongodb+srv://minin:frontend2025@cluster0.5zws1bo.mongodb.net/?appName=Cluster0
+JWT_SECRET=YOUR_SUPER_SECRET_JWT_KEY
 PORT=5000
-MONGO_URI="mongodb+srv://minin:frontend2025@cluster0.5zws1bo.mongodb.net/?appName=Cluster0"
-JWT_SECRET="replace_with_strong_secret"
