--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,8 +6,8 @@ services:
     env_file:
       - ./backend/.env
     restart: always
-    ports:
-      - "5000:5000"
+    expose:
+      - "5000"
 
   frontend:
     build: ./frontend
