--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,18 +2,31 @@ version: '3.9'
 
 services:
   backend:
-    build: ./backend
+    build:
+      context: ./backend
     env_file:
       - ./backend/.env
-    restart: always
-    expose:
-      - "5000"
+    ports:
+      - "5000:5000"
+    depends_on:
+      - mongo
 
   frontend:
-    build: ./frontend
-    restart: always
+    build:
+      context: .
+      dockerfile: ./Dockerfile.frontend
     ports:
-      - "80:80"
+      - "4173:4173"
     depends_on:
       - backend
+
+  mongo:
+    image: mongo:7
+    ports:
+      - "27017:27017"
+    volumes:
+      - mongo-data:/data/db
+
+volumes:
+  mongo-data:
 
