--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,8 +4,8 @@ services:
     env_file:
       - ./backend/.env
     restart: always
-    expose:
-      - "5000"
+    ports:
+      - "5000:5000"
 
   frontend:
     build: ./frontend
